--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
     <head>
         <title>Harsh Lahori</title>
         <meta content="width=device-width, initial-scale=1" name="viewport">
+        <meta name="theme-color" content="#2fadad" />
         <link  href="css/main.css" rel="stylesheet">
     <head>
     <body>
         <header class="site-header">
             <img class="profile-pic" src="https://instagram.fdel1-4.fna.fbcdn.net/vp/14c9d1cb93c16cd456d81a210c67c5ba/5D03CEF5/t51.2885-19/s150x150/49913216_582779972193057_2370359748781408256_n.jpg?_nc_ht=instagram.fdel1-4.fna.fbcdn.net">
             <div class="site-header-content">
-                    <h1>Hi, I am Harsh Lahori, I am 21 years old, Living in New Delhi,India</h1>
-                    <h3>i am pursuing graduation, i am very much interested in making a empire by myself.</h3>
-                    <h5>watch this <a class="instagram-link" href="https://bit.ly/2EgwZKD"> space to know what i am upto</a></h5>
+                    <h1>Hi, I'm Harsh Lahori, 21 Years Old, Living In New Delhi,India</h1>
+                    <h3>Pursuing Graduation & Very Much Interested In Building An Empire By Myself.</h3>
+                    <h5>Watch This <a class="instagram-link" href="https://bit.ly/2EgwZKD"> Space To Know What I'm Upto</a></h5>
             </div>
         </header>
     </body>
